--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "cross-env": "^7.0.3",
+    "primeicons": "^4.1.0",
     "primeng": "^12.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
